Add if-chain to switch conversion pass.

gcc/ChangeLog:

2019-11-04  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/14799
	PR ipa/88702
	* Makefile.in: Include new tree-if-to-switch.o.
	* common.opt: Document -ftree-if-to-switch.
	* doc/invoke.texi: Likewise.
	* opts.c: Enable the pass with -O2+.
	* passes.def: Add ne pass.
	* timevar.def (TV_TREE_IF_TO_SWITCH): Add new
	timevar.
	* tree-if-to-switch.c: New file.
	* tree-pass.h (make_pass_if_to_switch): New.

gcc/testsuite/ChangeLog:

2019-11-04  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/14799
	PR ipa/88702
	* gcc.dg/tree-ssa/if-to-switch-1.c: New test.
	* gcc.dg/tree-ssa/if-to-switch-2.c: New test.
	* gcc.dg/tree-ssa/if-to-switch-3.c: New test.
	* gcc.dg/tree-ssa/if-to-switch-4.c: New test.
	* gcc.dg/tree-ssa/if-to-switch-5.c: New test.
	* gcc.dg/tree-ssa/reassoc-32.c: Disable tree-if-to-switch
	in order to transform the range test.
	* gcc.dg/tree-ssa/reassoc-33.c: Likewise.